Pindah Git ke ssd yg baru

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
         Duis nisl leo, porttitor quis diam id, congue porta elit.
     </string>
     <string name="author">by Agus Kurniadin Khaer</string>
+    <string name="menu_pay_me_a_coffee">Pay me a coffee!</string>
 
 
 </resources>
